preference & preference GUI improvements